--- a/views/register.ejs
+++ b/views/register.ejs
@@ -22,7 +22,7 @@
         <div class="divform">
         <h1 class="h1register">Registre-se</h1>
 
-        <form action="/register" method="POST" id="formregister">
+        <form action="/create" method="POST" id="formregister">
 
             <div class="divinputuser">
                 <img id="iconuser" src="icons8-usuário.png" alt="https://icons8.com/icon/84020/usu%C3%A1rio">
